client/src/components/css/service-list.module.css
.mainContainer {
    margin: 0 auto;
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 20px;
    max-width: 1250px;
}
.mainContainer svg{
    color: #ff9fc6;
}

.titleContainer{
    padding: 40px;
    margin: 0;
}
.header{
    margin: 0;
}

.directory{
    margin: 0;
}
.directory ul{
    display: flex;
    flex-direction: row;
    padding-left: 10px;
    padding-right: 10px;
}

.mainContainer li{
    list-style: none;
}
.square{
    padding: 20px;
}
.square li{
    padding-top: 40px;
    padding-bottom: 40px;
    list-style: none;
    color: aqua;
}
.serviceContent {
    padding: 10px;
}
.serviceContainer{
    display: flex;
    justify-content: center;
    align-items: center;
    aspect-ratio: 450/450;
    background-color: rgb(240, 240, 240);
    border-radius: 10px;
    margin: 20px;
}
.serviceContainer:hover{
    background-color: #ff9fc6;
    color: white;
    transition: 0.4s;
    cursor: pointer;
}
.serviceContainer:hover svg{
    color: white;
    transition: 0.4s;
}

